Header & Logo Initialized: BackGround Color Set

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,5 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-<h1> Hello Mister <h1>
+<nav class="navbar navbar-dark" style="background-color: #FFFC00;">
+    <a class="navbar-brand" href="http://localhost:4200/">
+      <img src="assets/snapchat-logo.png" width="30" height="30" alt="">
+    </a>
+  </nav>
