--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,21 @@
-<nav class="navbar navbar-dark" style="background-color: #FFFC00;">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #FFFC00;">
     <a class="navbar-brand" href="http://localhost:4200/">
       <img src="assets/snapchat-logo.png" width="30" height="30" alt="">
     </a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+        </ul>
+      </div>
   </nav>
