--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,16 +5,19 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" style="color: black;" href="#">Advertisers</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" style="color: black;" href="#">Creators</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" style="color: black;" href="#">Developers</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" style="color: black;" href="#">Snap AR</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: black;" href="#">Features</a>
           </li>
         </ul>
       </div>
