Dropdown menu initialized

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,11 +13,20 @@
           <li class="nav-item">
             <a class="nav-link" style="color: black;" href="#">Developers</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" style="color: black;" href="#">Snap AR</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link" style="color: black;" href="#">Features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: black;" href="#">Features</a>
+            <a class="nav-link dropdown-toggle" style="color: black;" href="#" role="button" data-bs-toggle="dropdown">
+              Snap AR</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Spotlight</a></li>
+              <li><a class="dropdown-item" href="#">Stories</a></li>
+              <li><a class="dropdown-item" href="#">Maps</a></li>
+              <li><a class="dropdown-item" href="#">Explore Lenses</a></li>
+              <li><a class="dropdown-item" href="#">Create Filters</a></li>
+              <li><a class="dropdown-item" href="#">Snapcodes</a></li>
+            </ul>
           </li>
         </ul>
       </div>
