--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,36 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #FFFC00;">
-    <a class="navbar-brand" href="http://localhost:4200/">
-      <img src="assets/snapchat-logo.png" width="30" height="30" alt="">
-    </a>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" style="color: black;" href="#">Advertisers</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" style="color: black;" href="#">Creators</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" style="color: black;" href="#">Developers</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link" style="color: black;" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link dropdown-toggle" style="color: black;" href="#" role="button" data-bs-toggle="dropdown">
-              Snap AR</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Spotlight</a></li>
-              <li><a class="dropdown-item" href="#">Stories</a></li>
-              <li><a class="dropdown-item" href="#">Maps</a></li>
-              <li><a class="dropdown-item" href="#">Explore Lenses</a></li>
-              <li><a class="dropdown-item" href="#">Create Filters</a></li>
-              <li><a class="dropdown-item" href="#">Snapcodes</a></li>
-            </ul>
-          </li>
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark"style="background-color: #fffc00;">
+  <a class="navbar-brand" href="#">
+    <img src="assets/snapchat-logo.png" width="30" height="30" alt="">
+  </a>
+  <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="https://forbusiness.snapchat.com/" style="color: #000000">Advertisers</a>
+      <li class="nav-item">
+        <a class="nav-link" href="https://creators.snap.com/" style="color: #000000">Creators</a>
+      <li class="nav-item">
+        <a class="nav-link" href="https://developers.snap.com/" style="color: #000000">Developers</a>
+      <li class="nav-item">
+        <a class="nav-link" href="https://ar.snap.com/" style="color: #000000">Snap AR</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" style="color: #000000" role="button" data-bs-toggle="dropdown">
+          Features</a>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Spotlight</a></li>
+          <li><a class="dropdown-item" href="#">Stories</a></li>
+          <li><a class="dropdown-item" href="#">Maps</a></li>
+          <li><a class="dropdown-item" href="#">Explore Lenses</a></li>
+          <li><a class="dropdown-item" href="#">Create Filters</a></li>
+          <li><a class="dropdown-item" href="#">Snapcodes</a></li>
         </ul>
-      </div>
+      </li>
+      <a role="button" class="btn btn-light" href="https://www.snapchat.com/download">
+        Download
+      </a>
+      <a href="https://web.snapchat.com/?ref=web_nav_login_button/" role="button" class="btn btn-dark">
+        Log in to chat
+      </a>
+    </ul>
+  </div>
   </nav>
