--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,5 +4,15 @@ nav {
 .navbar-nav{
     color: black;
 }
-.btn-light {font-weight: bold; border-radius: 24px;}
-.btn-dark {font-weight: bold; border-radius: 24px;}
+navbar-nav li{
+    margin: 7px;
+}
+.btn-light {font-weight: bold; 
+    border-radius: 24px;
+    margin-left: 8px;
+}
+.btn-dark {font-weight: bold; 
+    border-radius: 24px;
+    margin-left: 15px;
+    margin-right: 74px;
+}
