Links In Dropdown & Footer File Made

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,12 +17,12 @@
         <a class="nav-link dropdown-toggle" href="#" style="color: #000000" role="button" data-bs-toggle="dropdown">
           Features</a>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Spotlight</a></li>
-          <li><a class="dropdown-item" href="#">Stories</a></li>
-          <li><a class="dropdown-item" href="#">Maps</a></li>
-          <li><a class="dropdown-item" href="#">Explore Lenses</a></li>
-          <li><a class="dropdown-item" href="#">Create Filters</a></li>
-          <li><a class="dropdown-item" href="#">Snapcodes</a></li>
+          <li><a class="dropdown-item" href="https://story.snapchat.com/spotlight/W7_EDlXWTBiXAEEniNoMPwAAYcnFzdmFuamNnAYSKXHZOAYSKXGRqAAAAAA?lang=en-US">Spotlight</a></li>
+          <li><a class="dropdown-item" href="https://www.snapchat.com/discover?lang=en-US">Stories</a></li>
+          <li><a class="dropdown-item" href="https://map.snapchat.com/?lang=en-US">Maps</a></li>
+          <li><a class="dropdown-item" href="https://lens.snapchat.com/?lang=en-US">Explore Lenses</a></li>
+          <li><a class="dropdown-item" href="https://create.snapchat.com/org/guest/purchase/filter/upload-asset">Create Filters</a></li>
+          <li><a class="dropdown-item" href="https://snapcodes.snapchat.com/">Snapcodes</a></li>
         </ul>
       </li>
       <a role="button" class="btn btn-light" href="https://www.snapchat.com/download">
