--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
       <a role="button" class="btn btn-light" href="https://www.snapchat.com/download">
         Download
       </a>
-      <a href="https://web.snapchat.com/?ref=web_nav_login_button/" role="button" class="btn btn-dark">
+      <a role="button" class="btn btn-dark" href="https://web.snapchat.com/?ref=web_nav_login_button/">
         Log in to chat
       </a>
     </ul>
@@ -45,8 +45,8 @@
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4" style="color: #000000;">
           <!-- Content -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>Company
+          <h6 class="fw-bold mb-4">
+            Company
           </h6>
           <p>
             <a href="https://www.snap.com/en-US" class="text-reset">Snap Inc.</a>
@@ -65,7 +65,7 @@
         <!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" style="color: #000000;">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
+          <h6 class="fw-bold mb-4">
             Community
           </h6>
           <p>
@@ -82,7 +82,7 @@
         <!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" style="color: #000000;">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
+          <h6 class="fw-bold mb-4">
             Advertising
           </h6>
           <p>
@@ -105,7 +105,9 @@
         <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4" style="color: #000000;">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">Legal</h6>
+          <h6 class="fw-bold mb-4">
+            Legal
+          </h6>
           <p>
             <a href="https://help.snapchat.com/hc/en-us/articles/11399265637012?utm_campaign=privacy_choices&utm_medium=global_footer&utm_source=snapchat_com" class="text-reset">Your Privacy Choices</a>
           </p>
