--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,139 +1,2 @@
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark"style="background-color: #fffc00;">
-  <a class="navbar-brand" href="#">
-    <img src="assets/snapchat-logo.png" width="30" height="30" alt="">
-  </a>
-  <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="https://forbusiness.snapchat.com/" style="color: #000000">Advertisers</a>
-      <li class="nav-item">
-        <a class="nav-link" href="https://creators.snap.com/" style="color: #000000">Creators</a>
-      <li class="nav-item">
-        <a class="nav-link" href="https://developers.snap.com/" style="color: #000000">Developers</a>
-      <li class="nav-item">
-        <a class="nav-link" href="https://ar.snap.com/" style="color: #000000">Snap AR</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" style="color: #000000" role="button" data-bs-toggle="dropdown">
-          Features</a>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="https://story.snapchat.com/spotlight/W7_EDlXWTBiXAEEniNoMPwAAYcnFzdmFuamNnAYSKXHZOAYSKXGRqAAAAAA?lang=en-US">Spotlight</a></li>
-          <li><a class="dropdown-item" href="https://www.snapchat.com/discover?lang=en-US">Stories</a></li>
-          <li><a class="dropdown-item" href="https://map.snapchat.com/?lang=en-US">Maps</a></li>
-          <li><a class="dropdown-item" href="https://lens.snapchat.com/?lang=en-US">Explore Lenses</a></li>
-          <li><a class="dropdown-item" href="https://create.snapchat.com/org/guest/purchase/filter/upload-asset">Create Filters</a></li>
-          <li><a class="dropdown-item" href="https://snapcodes.snapchat.com/">Snapcodes</a></li>
-        </ul>
-      </li>
-      <a role="button" class="btn btn-light" href="https://www.snapchat.com/download">
-        Download
-      </a>
-      <a role="button" class="btn btn-dark" href="https://web.snapchat.com/?ref=web_nav_login_button/">
-        Log in to chat
-      </a>
-    </ul>
-  </div>
-  </nav>
-
-  <!-- Footer -->
-<footer class="text-center text-lg-start fixed-bottom bg-light text-muted">
-  <!-- Section: Links  -->
-  <section class="">
-    <div class="container text-center text-md-start mt-5">
-      <!-- Grid row -->
-      <div class="row mt-3">
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4" style="color: #000000;">
-          <!-- Content -->
-          <h6 class="fw-bold mb-4">
-            Company
-          </h6>
-          <p>
-            <a href="https://www.snap.com/en-US" class="text-reset">Snap Inc.</a>
-          </p>
-          <p>
-            <a href="https://careers.snap.com/" class="text-reset">Careers</a>
-          </p>
-          <p>
-            <a href="https://newsroom.snap.com/" class="text-reset">News</a>
-          </p>
-          <p>
-            <a href="https://values.snap.com/" class="text-reset">Privacy and Safety</a>
-          </p>
-        </div>
-        <!-- Grid column -->
-        <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" style="color: #000000;">
-          <!-- Links -->
-          <h6 class="fw-bold mb-4">
-            Community
-          </h6>
-          <p>
-            <a href="https://help.snapchat.com/hc/en-us" class="text-reset">Snapchat Support</a>
-          </p>
-          <p>
-            <a href="https://support.pixy.com/hc/en-us"  class="text-reset">Pixy Support</a>
-          </p>
-          <p>
-            <a href="https://values.snap.com/privacy/transparency/community-guidelines" class="text-reset">Community Guidelines</a>
-          </p>
-        </div>
-        <!-- Grid column -->
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" style="color: #000000;">
-          <!-- Links -->
-          <h6 class="fw-bold mb-4">
-            Advertising
-          </h6>
-          <p>
-            <a href="https://ads.snapchat.com/instant-setup/business-name" class="text-reset">Buy Ads</a>
-          </p>
-          <p>
-            <a href="https://www.snap.com/en-US/ad-policies" class="text-reset">Advertising Policies</a>
-          </p>
-          <p>
-            <a href="https://www.snap.com/en-US/political-ads" class="text-reset">Political Ads Library</a>
-          </p>
-          <p>
-            <a href="https://www.snap.com/en-US/brand-guidelines" class="text-reset">Brand Guidelines</a>
-          </p>
-          <p>
-            <a href="https://help.snapchat.com/hc/en-us/articles/7047502545044" class="text-reset">Promotions Rules</a>
-          </p>
-        </div>
-        <!-- Grid column -->
-        <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4" style="color: #000000;">
-          <!-- Links -->
-          <h6 class="fw-bold mb-4">
-            Legal
-          </h6>
-          <p>
-            <a href="https://help.snapchat.com/hc/en-us/articles/11399265637012?utm_campaign=privacy_choices&utm_medium=global_footer&utm_source=snapchat_com" class="text-reset">Your Privacy Choices</a>
-          </p>
-          <p>
-            <a href="https://www.snap.com/en-US/policies" class="text-reset">Snap Terms</a>
-          </p>
-          <p>
-            <a href="https://values.snap.com/safety/safety-enforcement" class="text-reset">Law Enforcement</a>
-          </p>
-          <p>
-            <a href="https://www.snap.com/en-US/cookie-policy" class="text-reset">Cookie Policy</a>
-          </p>
-          <p>
-            <a href="https://www.snapchat.com/cookie-settings" class="text-reset">Cookie Settings</a>
-          </p>
-          <p>
-            <a href="https://help.snapchat.com/hc/en-us/articles/7012332110996" class="text-reset">Report Infringement</a>
-          </p>
-        </div>
-        <!-- Grid column -->
-      </div>
-      <!-- Grid row -->
-    </div>
-  </section>
-  <!-- Section: Links  -->
-  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-  </div>
-</footer>
-<!-- Footer -->
+<app-navbar></app-navbar>
+<app-footernav></app-footernav>
