--- a/src/app/footernav/footernav.component.html
+++ b/src/app/footernav/footernav.component.html
@@ -95,8 +95,16 @@
         <!-- Grid row -->
       </div>
     </section>
+    <label for="exampleFormControlSelect1">Language</label>
+      <select class="form-control" id="exampleFormControlSelect1">
+        <option>English (US)</option>
+        <option>English (UK)</option>
+        <option>Espanol</option>
+        <option>Polski</option>
+        <option>Norsk</option>
+      </select>
     <!-- Section: Links  -->
-    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+    <div class="text-center p-4" style="background-color: #1f2022">
     </div>
   </footer>
   <!-- Footer -->
