Text Initialized in Bottom of Footer

--- a/src/app/footernav/footernav.component.html
+++ b/src/app/footernav/footernav.component.html
@@ -12,16 +12,16 @@
               Company
             </h6>
             <p>
-              <a href="https://www.snap.com/en-US" class="text-reset">Snap Inc.</a>
+              <a style="text-decoration: none;" href="https://www.snap.com/en-US" class="text-reset">Snap Inc.</a>
             </p>
             <p>
-              <a href="https://careers.snap.com/" class="text-reset">Careers</a>
+              <a style="text-decoration: none;" href="https://careers.snap.com/" class="text-reset">Careers</a>
             </p>
             <p>
-              <a href="https://newsroom.snap.com/" class="text-reset">News</a>
+              <a style="text-decoration: none;" href="https://newsroom.snap.com/" class="text-reset">News</a>
             </p>
             <p>
-              <a href="https://values.snap.com/" class="text-reset">Privacy and Safety</a>
+              <a style="text-decoration: none;" href="https://values.snap.com/" class="text-reset">Privacy and Safety</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -32,13 +32,13 @@
               Community
             </h6>
             <p>
-              <a href="https://help.snapchat.com/hc/en-us" class="text-reset">Snapchat Support</a>
+              <a style="text-decoration: none;" href="https://help.snapchat.com/hc/en-us" class="text-reset">Snapchat Support</a>
             </p>
             <p>
-              <a href="https://support.pixy.com/hc/en-us"  class="text-reset">Pixy Support</a>
+              <a style="text-decoration: none;" href="https://support.pixy.com/hc/en-us"  class="text-reset">Pixy Support</a>
             </p>
             <p>
-              <a href="https://values.snap.com/privacy/transparency/community-guidelines" class="text-reset">Community Guidelines</a>
+              <a style="text-decoration: none;" href="https://values.snap.com/privacy/transparency/community-guidelines" class="text-reset">Community Guidelines</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -49,19 +49,19 @@
               Advertising
             </h6>
             <p>
-              <a href="https://ads.snapchat.com/instant-setup/business-name" class="text-reset">Buy Ads</a>
+              <a style="text-decoration: none;" href="https://ads.snapchat.com/instant-setup/business-name" class="text-reset">Buy Ads</a>
             </p>
             <p>
-              <a href="https://www.snap.com/en-US/ad-policies" class="text-reset">Advertising Policies</a>
+              <a style="text-decoration: none;" href="https://www.snap.com/en-US/ad-policies" class="text-reset">Advertising Policies</a>
             </p>
             <p>
-              <a href="https://www.snap.com/en-US/political-ads" class="text-reset">Political Ads Library</a>
+              <a style="text-decoration: none;" href="https://www.snap.com/en-US/political-ads" class="text-reset">Political Ads Library</a>
             </p>
             <p>
-              <a href="https://www.snap.com/en-US/brand-guidelines" class="text-reset">Brand Guidelines</a>
+              <a style="text-decoration: none;" href="https://www.snap.com/en-US/brand-guidelines" class="text-reset">Brand Guidelines</a>
             </p>
             <p>
-              <a href="https://help.snapchat.com/hc/en-us/articles/7047502545044" class="text-reset">Promotions Rules</a>
+              <a style="text-decoration: none;" href="https://help.snapchat.com/hc/en-us/articles/7047502545044" class="text-reset">Promotions Rules</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -72,22 +72,22 @@
               Legal
             </h6>
             <p>
-              <a href="https://help.snapchat.com/hc/en-us/articles/11399265637012?utm_campaign=privacy_choices&utm_medium=global_footer&utm_source=snapchat_com" class="text-reset">Your Privacy Choices</a>
+              <a style="text-decoration: none;" href="https://help.snapchat.com/hc/en-us/articles/11399265637012?utm_campaign=privacy_choices&utm_medium=global_footer&utm_source=snapchat_com" class="text-reset">Your Privacy Choices</a>
             </p>
             <p>
-              <a href="https://www.snap.com/en-US/policies" class="text-reset">Snap Terms</a>
+              <a style="text-decoration: none;" href="https://www.snap.com/en-US/policies" class="text-reset">Snap Terms</a>
             </p>
             <p>
-              <a href="https://values.snap.com/safety/safety-enforcement" class="text-reset">Law Enforcement</a>
+              <a style="text-decoration: none;" href="https://values.snap.com/safety/safety-enforcement" class="text-reset">Law Enforcement</a>
             </p>
             <p>
-              <a href="https://www.snap.com/en-US/cookie-policy" class="text-reset">Cookie Policy</a>
+              <a style="text-decoration: none;" href="https://www.snap.com/en-US/cookie-policy" class="text-reset">Cookie Policy</a>
             </p>
             <p>
-              <a href="https://www.snapchat.com/cookie-settings" class="text-reset">Cookie Settings</a>
+              <a style="text-decoration: none;" href="https://www.snapchat.com/cookie-settings" class="text-reset">Cookie Settings</a>
             </p>
             <p>
-              <a href="https://help.snapchat.com/hc/en-us/articles/7012332110996" class="text-reset">Report Infringement</a>
+              <a style="text-decoration: none;" href="https://help.snapchat.com/hc/en-us/articles/7012332110996" class="text-reset">Report Infringement</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -105,6 +105,7 @@
       </select>
     <!-- Section: Links  -->
     <div class="text-center p-4" style="background-color: #1f2022">
+      <p>Snap, chat and video call your friends from your browser.</p>
     </div>
   </footer>
   <!-- Footer -->
