Social Footer Initialized

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-navbar></app-navbar>
-<app-footernav></app-footernav>
-<app-body></app-body>
+<app-navbar> </app-navbar>
+<app-footernav> </app-footernav>
+<app-body> </app-body>
+<app-social-footer> </app-social-footer>
