Fixed up Components

--- a/src/app/footernav/footernav.component.html
+++ b/src/app/footernav/footernav.component.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="text-center text-lg-start fixed-bottom bg-light text-muted">
+<footer class="text-center text-lg-start bg-light text-muted fixed-bottom">
     <!-- Section: Links  -->
     <section class="">
       <div class="container text-center text-md-start mt-5">
@@ -23,6 +23,14 @@
             <p>
               <a style="text-decoration: none;" href="https://values.snap.com/" class="text-reset">Privacy and Safety</a>
             </p>
+            <label for="exampleFormControlSelect1">Language</label>
+        <select class="form-control" id="exampleFormControlSelect1">
+          <option>English (US)</option>
+          <option>English (UK)</option>
+          <option>Espanol</option>
+          <option>Polski</option>
+          <option>Norsk</option>
+        </select>
           </div>
           <!-- Grid column -->
           <!-- Grid column -->
@@ -95,17 +103,6 @@
         <!-- Grid row -->
       </div>
     </section>
-    <label for="exampleFormControlSelect1">Language</label>
-      <select class="form-control" id="exampleFormControlSelect1">
-        <option>English (US)</option>
-        <option>English (UK)</option>
-        <option>Espanol</option>
-        <option>Polski</option>
-        <option>Norsk</option>
-      </select>
     <!-- Section: Links  -->
-    <div class="text-center p-4" style="background-color: #1f2022">
-      <p>Snap, chat and video call your friends from your browser.</p>
-    </div>
   </footer>
   <!-- Footer -->
