--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,5 +1,5 @@
-<html>
-    <body>
-        
-    </body>
-</html>
+<div class="scroll">
+    <div class="col-10 mt-5 text-end justify-content-center">
+        <img src="assets/Labtop Snap.png" class="rounded" alt="...">
+      </div>
+    </div>
