--- a/src/app/footernav/footernav.component.html
+++ b/src/app/footernav/footernav.component.html
@@ -1,108 +1,107 @@
 <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted fixed-bottom">
-    <!-- Section: Links  -->
-    <section class="">
-      <div class="container text-center text-md-start mt-5">
-        <!-- Grid row -->
-        <div class="row mt-3">
-          <!-- Grid column -->
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4" style="color: #000000;">
-            <!-- Content -->
-            <h6 class="fw-bold mb-4">
-              Company
+<footer class="sticky">
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container mt-5">
+      <!-- Grid row -->
+      <div class="row">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-2 mx-auto mb-5" style="color: #000000;">
+          <!-- Content -->
+          <h6 class="footer-column-header mb-4">
+            Company
+          </h6>
+          <p>
+            <a href="https://www.snap.com/en-US" class="text-reset">Snap Inc.</a>
+          </p>
+          <p>
+            <a href="https://careers.snap.com/" class="text-reset">Careers</a>
+          </p>
+          <p>
+            <a href="https://newsroom.snap.com/" class="text-reset">News</a>
+          </p>
+          <h6 class="">
+              Language
             </h6>
-            <p>
-              <a style="text-decoration: none;" href="https://www.snap.com/en-US" class="text-reset">Snap Inc.</a>
-            </p>
-            <p>
-              <a style="text-decoration: none;" href="https://careers.snap.com/" class="text-reset">Careers</a>
-            </p>
-            <p>
-              <a style="text-decoration: none;" href="https://newsroom.snap.com/" class="text-reset">News</a>
-            </p>
-            <p>
-              <a style="text-decoration: none;" href="https://values.snap.com/" class="text-reset">Privacy and Safety</a>
-            </p>
-            <label for="exampleFormControlSelect1">Language</label>
-        <select class="form-control" id="exampleFormControlSelect1">
-          <option>English (US)</option>
-          <option>English (UK)</option>
-          <option>Espanol</option>
-          <option>Polski</option>
-          <option>Norsk</option>
-        </select>
-          </div>
-          <!-- Grid column -->
-          <!-- Grid column -->
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" style="color: #000000;">
-            <!-- Links -->
-            <h6 class="fw-bold mb-4">
-              Community
-            </h6>
-            <p>
-              <a style="text-decoration: none;" href="https://help.snapchat.com/hc/en-us" class="text-reset">Snapchat Support</a>
-            </p>
-            <p>
-              <a style="text-decoration: none;" href="https://support.pixy.com/hc/en-us"  class="text-reset">Pixy Support</a>
-            </p>
-            <p>
-              <a style="text-decoration: none;" href="https://values.snap.com/privacy/transparency/community-guidelines" class="text-reset">Community Guidelines</a>
-            </p>
-          </div>
-          <!-- Grid column -->
-          <!-- Grid column -->
-          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" style="color: #000000;">
-            <!-- Links -->
-            <h6 class="fw-bold mb-4">
-              Advertising
-            </h6>
-            <p>
-              <a style="text-decoration: none;" href="https://ads.snapchat.com/instant-setup/business-name" class="text-reset">Buy Ads</a>
-            </p>
-            <p>
-              <a style="text-decoration: none;" href="https://www.snap.com/en-US/ad-policies" class="text-reset">Advertising Policies</a>
-            </p>
-            <p>
-              <a style="text-decoration: none;" href="https://www.snap.com/en-US/political-ads" class="text-reset">Political Ads Library</a>
-            </p>
-            <p>
-              <a style="text-decoration: none;" href="https://www.snap.com/en-US/brand-guidelines" class="text-reset">Brand Guidelines</a>
-            </p>
-            <p>
-              <a style="text-decoration: none;" href="https://help.snapchat.com/hc/en-us/articles/7047502545044" class="text-reset">Promotions Rules</a>
-            </p>
-          </div>
-          <!-- Grid column -->
-          <!-- Grid column -->
-          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4" style="color: #000000;">
-            <!-- Links -->
-            <h6 class="fw-bold mb-4">
-              Legal
-            </h6>
-            <p>
-              <a style="text-decoration: none;" href="https://help.snapchat.com/hc/en-us/articles/11399265637012?utm_campaign=privacy_choices&utm_medium=global_footer&utm_source=snapchat_com" class="text-reset">Your Privacy Choices</a>
-            </p>
-            <p>
-              <a style="text-decoration: none;" href="https://www.snap.com/en-US/policies" class="text-reset">Snap Terms</a>
-            </p>
-            <p>
-              <a style="text-decoration: none;" href="https://values.snap.com/safety/safety-enforcement" class="text-reset">Law Enforcement</a>
-            </p>
-            <p>
-              <a style="text-decoration: none;" href="https://www.snap.com/en-US/cookie-policy" class="text-reset">Cookie Policy</a>
-            </p>
-            <p>
-              <a style="text-decoration: none;" href="https://www.snapchat.com/cookie-settings" class="text-reset">Cookie Settings</a>
-            </p>
-            <p>
-              <a style="text-decoration: none;" href="https://help.snapchat.com/hc/en-us/articles/7012332110996" class="text-reset">Report Infringement</a>
-            </p>
-          </div>
-          <!-- Grid column -->
+      <select class="form-control" id="exampleFormControlSelect1">
+        <option>English (US)</option>
+        <option>English (UK)</option>
+        <option>Espanol</option>
+        <option>Polski</option>
+        <option>Norsk</option>
+      </select>
         </div>
-        <!-- Grid row -->
+        <!-- Grid column -->
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" style="color: #000000;">
+          <!-- Links -->
+          <h6 class="footer-column-header mb-4">
+            Community
+          </h6>
+          <p>
+            <a href="https://help.snapchat.com/hc/en-us" class="text-reset">Support</a>
+          </p>
+          <p>
+            <a href="https://support.pixy.com/hc/en-us"  class="text-reset">Community Guidelines</a>
+          </p>
+          <p>
+            <a href="https://values.snap.com/privacy/transparency/community-guidelines" class="text-reset">Safety Center</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" style="color: #000000;">
+          <!-- Links -->
+          <h6 class="footer-column-header mb-4">
+            Advertising
+          </h6>
+          <p>
+            <a href="https://ads.snapchat.com/instant-setup/business-name" class="text-reset">Buy Ads</a>
+          </p>
+          <p>
+            <a href="https://www.snap.com/en-US/ad-policies" class="text-reset">Advertising Policies</a>
+          </p>
+          <p>
+            <a href="https://www.snap.com/en-US/political-ads" class="text-reset">Political Ads Library</a>
+          </p>
+          <p>
+            <a href="https://www.snap.com/en-US/brand-guidelines" class="text-reset">Brand Guidelines</a>
+          </p>
+          <p>
+            <a href="https://help.snapchat.com/hc/en-us/articles/7047502545044" class="text-reset">Promotions Rules</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4" style="color: #000000;">
+          <!-- Links -->
+          <h6 class="footer-column-header mb-4">
+            Legal
+          </h6>
+          <p>
+            <a href="https://help.snapchat.com/hc/en-us/articles/11399265637012?utm_campaign=privacy_choices&utm_medium=global_footer&utm_source=snapchat_com" class="text-reset">Privacy Center</a>
+          </p>
+          <p>
+            <a href="https://www.snap.com/en-US/policies" class="text-reset">Cookie Policy</a>
+          </p>
+          <p>
+            <a href="https://values.snap.com/safety/safety-enforcement" class="text-reset">Report Infringement</a>
+          </p>
+          <p>
+            <a href="https://www.snap.com/en-US/cookie-policy" class="text-reset">Custom Creative Tools Terms</a>
+          </p>
+          <p>
+            <a href="https://www.snapchat.com/cookie-settings" class="text-reset">Community Geofilter Terms</a>
+          </p>
+          <p>
+            <a href="https://help.snapchat.com/hc/en-us/articles/7012332110996" class="text-reset">Lens Studio Terms</a>
+          </p>
+        </div>
+        <!-- Grid column -->
       </div>
-    </section>
-    <!-- Section: Links  -->
-  </footer>
-  <!-- Footer -->
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+</footer>
+<!-- Footer -->
