--- a/src/app/social-footer/social-footer.component.html
+++ b/src/app/social-footer/social-footer.component.html
@@ -1,16 +1,20 @@
 <div class="container">
-    <footer style="background-color: black;" class="d-flex flex-wrap justify-content-end fixed-bottom py-3 my-4">
-      <div class="col-md-4 d-flex">
-        <a href="/" class="mb-3 me-2 mb-md-0 lh-1">
-          <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-        </a>
-        <span style="color: yellow;" class="">New!</span>
-      </div>
-
-      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-      </ul>
-    </footer>
+  <footer style="background-color: #181818;" class="d-flex flex-wrap justify-content-center fixed-bottom py-2">
+    <div class="col-md-4 d-flex">
+      <h6 class="heading">
+          <span style="color: #fffc00; font-family: Arial, Helvetica, sans-serif; font-size: 14px;" class="highlighted-text">
+              <img src="assets/Chat symbol.png" width="16" height="17" alt="">
+              New!
+          </span>
+          <span style="color: white; font-family: Arial, Helvetica, sans-serif; font-size: 14px;" class="text">
+              Snap, chat and video call your friends from your browser.
+          </span>
+          <span class="Links">
+            <a href="https://web.snapchat.com/?ref=web_try_now_footer_cta" style="color: #fffc00;">
+              Try now!
+            </a>
+          </span>
+      </h6>
+    </div>
+  </footer>
 </div>
