Product Model and Mock List Initiated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
-<app-navbar> </app-navbar>
-<app-body> </app-body>
-<app-social-footer> </app-social-footer>
-<app-footernav> </app-footernav>
+<app-navbar> Loading... </app-navbar>
+<app-body> Loading... </app-body>
+<div class = "container-fluid d-flex">
+    <div *ngFor="">
+        
+    </div>
+
+
+
+</div>
+<app-social-footer> Loading... </app-social-footer>
+<app-footernav> Loading... </app-footernav>
