--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,9 @@
 <app-navbar> Loading... </app-navbar>
 <app-body> Loading... </app-body>
 <div class = "container-fluid d-flex">
-    <div *ngFor="">
-        
+    <div *ngFor="let item of">
+        <app-body imgDescription="galaxy"></app-body>
     </div>
-
-
-
 </div>
 <app-social-footer> Loading... </app-social-footer>
 <app-footernav> Loading... </app-footernav>
