--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,6 +1,13 @@
-
 <div class="scroll">
     <div class="col-10 mt-5 text-end justify-content-center">
         <img src="assets/Labtop Snap.png" class="rounded" alt="...">
+      </div>
+    </div>
+    <div class="card justify-content-center" style="width: 18rem;">
+      <img src="assets/Chat Symbol.png" class="card-img-top" alt="">
+      <div class="card-body">
+        <h5 class="card-title"></h5>
+        <p class="card-text"></p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
