--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,13 +1,14 @@
 <div class="scroll">
-    <div class="col-10 mt-5 text-end justify-content-center">
-        <img src="assets/Labtop Snap.png" class="rounded" alt="...">
-      </div>
-    </div>
-    <div class="card justify-content-center" style="width: 18rem;">
-      <img src="assets/Chat Symbol.png" class="card-img-top" alt="">
-      <div class="card-body">
-        <h5 class="card-title"></h5>
-        <p class="card-text"></p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
+  <div class="col-10 justify-content-center">
+    <span style="font-family: Arial, Helvetica, sans-serif; font-size: 14px;" class="text">
+      <h1>Snapchat is now on the web!</h1>
+      <p>Chat, Snap, and video call your friends from wherever you are.</p>
+      <a role="button" class="btn btn-dark" href="https://web.snapchat.com/?ref=web_nav_login_button/">
+        Log in to chat
+      </a>
+  </span>
+  </div>
+<div class="col-10 text-end justify-content-center">
+    <img src="assets/Labtop Snap.png" class="rounded" alt="...">
+  </div>
+</div>
