--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -1,3 +1,31 @@
 .rounded{
-    height: 450px;
+    height: 400px;
+    position: relative;
+    bottom: 320px;
+    left: 100px;
+}
+.text{
+    padding: 0 350px;
+}
+h1{
+    font-size: 65px;
+    width: 450px;
+    position: relative;
+    left: 117px;
+    top: 80px;
+}
+p{
+    font-size: 25px;
+    width: 450px;
+    position: relative;
+    left: 117px;
+    top: 80px;
+}
+.btn-dark{
+    font-weight: bold; 
+    border-radius: 24px;
+    position: relative;
+    left: 117px;
+    top: 80px;
+    background-color: black;
 }
