--- a/src/app/footernav/footernav.component.css
+++ b/src/app/footernav/footernav.component.css
@@ -1,5 +1,4 @@
 .container{
-    width: 80%;
     background-image: none;
     position: static;
     margin-top: 20px;
@@ -29,4 +28,8 @@
 .sticky{
     background-color: white;
     height: 300px;
+    margin-top: 40px;
+}
+.footer-column-header{
+    margin-top: 25px;
 }
