--- a/src/app/social-footer/social-footer.component.css
+++ b/src/app/social-footer/social-footer.component.css
@@ -1,7 +1,6 @@
 .heading{
     padding: 6px;
     justify-content: center;
-    width: 1200px;
 }
 .Links{
     text-decoration: underline;
@@ -9,4 +8,7 @@
 }
 .container{
     height: 30px;
+}
+.col-md-4{
+    width: 500px;
 }
