--- a/src/app/social-footer/social-footer.component.css
+++ b/src/app/social-footer/social-footer.component.css
@@ -1,6 +1,8 @@
 .heading{
     padding: 6px;
     justify-content: center;
+    position: relative;
+    top: 3px;
 }
 .Links{
     text-decoration: underline;
