--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
 <app-navbar> Loading... </app-navbar>
-<app-body> Loading... </app-body>
-
-<app-social-footer> Loading... </app-social-footer>
-<app-footernav> Loading... </app-footernav>
+<router-outlet> </router-outlet>
