Sign Up Page Started

--- a/src/app/social-footer/social-footer.component.html
+++ b/src/app/social-footer/social-footer.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <footer style="background-color: #181818;" class="d-flex flex-wrap justify-content-center fixed-bottom py-2">
+  <footer style="background-color: #181818;" class="d-flex flex-wrap fixed-bottom justify-content-center py-2">
     <div class="col-md-4 d-flex">
       <h6 class="heading">
           <span style="color: #fffc00; font-family: Arial, Helvetica, sans-serif; font-size: 14px;" class="highlighted-text">
