--- a/src/app/Layout/second-layout/second-layout.component.html
+++ b/src/app/Layout/second-layout/second-layout.component.html
@@ -1,1 +1,3 @@
-<p>second-layout works!</p>
+<app-log-in-form> Loading... </app-log-in-form>
+<app-footernav> Loading... </app-footernav>
+<app-second-layout-social-footer> Loading... </app-second-layout-social-footer>
