--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -3,7 +3,7 @@
     <span style="font-family: Arial, Helvetica, sans-serif; font-size: 14px;" class="text">
       <h1>Snapchat is now on the web!</h1>
       <p>Chat, Snap, and video call your friends from wherever you are.</p>
-      <a role="button" class="btn btn-dark" href="https://web.snapchat.com/?ref=web_nav_login_button/">
+      <a role="button" class="btn btn-dark" href="SecondLayout">
         Log in to chat
       </a>
   </span>
