--- a/src/app/log-in-form/log-in-form.component.html
+++ b/src/app/log-in-form/log-in-form.component.html
@@ -1,14 +1,7 @@
-<section class="w-100 px-4 py-5 gradient-custom" style="border-radius: .5rem .5rem 0 0;">
+<section class="w-100 px-4 py-5 custom" style="border-radius: .5rem .5rem 0 0;">
     <style>
-      .gradient-custom {
-        /* fallback for old browsers */
-        background: #6a11cb;
-
-        /* Chrome 10-25, Safari 5.1-6 */
-        background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
-
-        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
+      .custom {
+        background: white
       }
     </style>
     <div class="row d-flex justify-content-center">
@@ -25,13 +18,10 @@
                 <input type="email" id="typeEmailX" class="form-control form-control-lg">
                 <label class="form-label" for="typeEmailX" style="margin-left: 0px;">Email</label>
               <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 40px;"></div><div class="form-notch-trailing"></div></div></div>
-
-              <div class="form-outline form-white mb-4">
-                <input type="password" id="typePasswordX" class="form-control form-control-lg">
-                <label class="form-label" for="typePasswordX" style="margin-left: 0px;">Password</label>
-              <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 64px;"></div><div class="form-notch-trailing"></div></div></div>
-
-              <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
+              
+              <div>
+                <p class="mb-0">Don't have an account? <a href="#!" class="text-white-50 fw-bold">Sign Up</a></p>
+              </div>
 
               <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
 
@@ -41,10 +31,6 @@
                 <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
               </div>
 
-            </div>
-
-            <div>
-              <p class="mb-0">Don't have an account? <a href="#!" class="text-white-50 fw-bold">Sign Up</a></p>
             </div>
 
           </div>
