All Layouts Created

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,7 +25,7 @@
             <li><a class="dropdown-item" href="https://snapcodes.snapchat.com/">Snapcodes</a></li>
           </ul>
         </li>
-        <a role="button" class="btn btn-light" href="https://www.snapchat.com/download">
+        <a role="button" class="btn btn-light" href="FirstLayout">
           Download
         </a>
         <a role="button" class="btn btn-dark" href="https://web.snapchat.com/?ref=web_nav_login_button/">
