First Layout Designed

--- a/src/app/social-footer/social-footer.component.html
+++ b/src/app/social-footer/social-footer.component.html
@@ -10,7 +10,7 @@
               Snap, chat and video call your friends from your browser.
           </span>
           <span class="Links">
-            <a href="https://web.snapchat.com/?ref=web_try_now_footer_cta" style="color: #fffc00;">
+            <a href="SecondLayout" style="color: #fffc00;">
               Try now!
             </a>
           </span>
