--- a/src/app/Layout/first-layout/first-layout.component.html
+++ b/src/app/Layout/first-layout/first-layout.component.html
@@ -1,2 +1,5 @@
 <app-navbar> Loading... </app-navbar>
+<app-body> Loading... </app-body>
+
+<app-social-footer> Loading... </app-social-footer>
 <app-footernav> Loading... </app-footernav>
