--- a/src/app/footernav/footernav.component.html
+++ b/src/app/footernav/footernav.component.html
@@ -15,7 +15,7 @@
             Company
           </h6>
           <p>
-            <a href="https://www.snap.com/en-US" class="text-reset">Snap Inc.</a>
+            <a href="" class="text-reset">Snap Inc.</a>
           </p>
           <p>
             <a href="https://careers.snap.com/" class="text-reset">Careers</a>
