--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,11 +25,11 @@
             <li><a class="dropdown-item" href="https://snapcodes.snapchat.com/">Snapcodes</a></li>
           </ul>
         </li>
-        <a role="button" class="btn btn-light" href="FirstLayout">
-          Download
+        <a role="button" class="btn btn-dark btnbtn" href="SecondLayout">
+          Snapchat Ads
         </a>
-        <a role="button" class="btn btn-dark" href="https://web.snapchat.com/?ref=web_nav_login_button/">
-          Log in to chat
+        <a role="button" class="btn btn-dark btnbtnbtn" href="FirstLayout">
+          Download
         </a>
       </ul>
     </div>
