--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark"style="background-color: #fffc00;">
     <a class="navbar-brand" href="">
-      <img src="assets/snapchat-logo.png" width="30" height="30" alt="">
+      <img src="assets/Stories Icon.png" width="30" height="30" alt="">
     </a>
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
