--- a/src/app/navbar2/navbar2.component.css
+++ b/src/app/navbar2/navbar2.component.css
@@ -14,6 +14,7 @@ nav {
     margin-left: 8px;
     background-color: black;
     height: 30px;
+    align-items: center;
     padding-top: 0%;
     padding-bottom: 0%;
     position: relative;
@@ -25,7 +26,7 @@ nav {
     margin-right: 15px;
     background-color: black;
     height: 30px;
-    text-align: center;
+    align-items: center;
     padding-top: 0%;
     position: relative;
     top: 5px;
