--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -5,28 +5,48 @@ nav {
     color: black;
     margin-left: 16px;
     margin-right: 16px;
+    display: flex;
 }
 .navbar-brand{
     margin-left: 25px; 
 }
+.nav-link{
+    justify-content: center;
+}
+.btns{
+    margin-right: 24px;
+}
 .btnbtn { 
-    border-radius: 24px;
-    margin-left: 8px;
+    margin-left: 10px;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 16px;
+    border-radius: 100px;
+    border: 0;
+    width: fit-content;
+    font-family: inherit;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    cursor: pointer;
+    text-decoration: none;
     background-color: black;
-    height: 30px;
-    padding-top: 0%;
-    padding-bottom: 0%;
-    position: relative;
-    top: 5px;
 }
 .btnbtnbtn { 
-    border-radius: 24px;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 10px;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 16px;
+    border-radius: 100px;
+    border: 0;
+    width: fit-content;
+    font-family: inherit;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    cursor: pointer;
+    text-decoration: none;
     background-color: black;
-    height: 30px;
-    text-align: center;
-    padding-top: 0%;
-    position: relative;
-    top: 5px;
 }
