--- a/src/app/navbar3/navbar3.component.html
+++ b/src/app/navbar3/navbar3.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark"style="background-color: #fffc00;">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark"style="background-color: white;">
     <a class="navbar-brand" href="">
       <img src="assets/snapchat-logo.png" width="30" height="30" alt="">
     </a>
