--- a/src/app/second-layout-social-footer/second-layout-social-footer.component.html
+++ b/src/app/second-layout-social-footer/second-layout-social-footer.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <footer style="background-color: #181818;" class="d-flex flex-wrap justify-content-center sticky py-2">
+<div class="" style="background-color: #181818;">
+    <footer class="d-flex flex-wrap justify-content-center sticky py-2">
       <div class="col-md-4 d-flex">
         
         <span style="color: gray; font-family: Arial, Helvetica, sans-serif; font-size: 14px;" class="text">
