--- a/src/app/social-footer/social-footer.component.html
+++ b/src/app/social-footer/social-footer.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="">
   <footer style="background-color: #181818;" class="d-flex flex-wrap fixed-bottom justify-content-center py-2">
     <div class="col-md-4 d-flex">
       <h6 class="heading">
