--- a/src/app/Layout/third-layout/third-layout.component.html
+++ b/src/app/Layout/third-layout/third-layout.component.html
@@ -1,1 +1,4 @@
-<p>third-layout works!</p>
+<app-navbar3> Loading... </app-navbar3>
+<app-body3> Loading... </app-body3>
+<app-footernav> Loading... </app-footernav>
+<app-social-footer> Loading... </app-social-footer>
