--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
         <li class="nav-item active">
           <a class="nav-link" href="https://forbusiness.snapchat.com/" style="color: #000000">Stories</a>
         <li class="nav-item">
-          <a class="nav-link" href="https://creators.snap.com/" style="color: #000000">Spotlight</a>
+          <a class="nav-link" href="ThirdLayout" style="color: #000000">Spotlight</a>
         <li class="nav-item">
           <a class="nav-link" href="https://developers.snap.com/" style="color: #000000">Chat</a>
         <li class="nav-item">
