--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -35,6 +35,7 @@ nav {
 }
 .btnbtnbtn { 
     margin-left: 10px;
+    margin-right: 20px;
     align-items: center;
     justify-content: center;
     padding: 8px 16px;
