--- a/src/app/body2/body2.component.html
+++ b/src/app/body2/body2.component.html
@@ -1,4 +1,4 @@
-<div class="scroll">
+<div class="scroll mb-0">
     <div class="col-10 justify-content-center">
       <span style="font-family: Arial, Helvetica, sans-serif; font-size: 14px;" class="text">
         <h1>Get Snapchat for any device</h1>
