--- a/src/app/body4/body4.component.html
+++ b/src/app/body4/body4.component.html
@@ -1,10 +1,13 @@
-<div class="scroll">
+<div class="scroll mb-0">
     <div class="col-10 justify-content-center">
       <span style="font-family: Arial, Helvetica, sans-serif; font-size: 14px;" class="text">
-        <h1>Snapchat is now on the web!</h1>
-        <p>Chat, Snap, and video call your friends from wherever you are.</p>
-        <a role="button" class="btn btn-dark" href="SecondLayout">
-          Log in to chat
-        </a>
+        <img src="assets/Snap Inc.svg" width="30" height="30" alt="">
+        <p>Snap Inc. is a technology company.</p>
+        <p>We believe the camera presents the greatest opportunity to improve the way people live and communicate.</p>
+        <p>We contribute to human progress by empowering people to express themselves, live in the moment, learn about the world, and have fun together.</p>
     </span>
     </div>
+  <div class="col-10 text-end justify-content-center">
+      
+    </div>
+  </div>
