--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -6,6 +6,8 @@ nav {
     margin-left: 16px;
     margin-right: 16px;
     display: flex;
+    position: relative;
+    left: 75px;
 }
 .navbar-brand{
     margin-left: 25px; 
