--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,6 +18,13 @@
         </li>
       </ul>
     </div>
+    <div class="dropdown column">
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+      <nav>
+        
+      </nav>
+
+    </div>
     <div class="justify-content-end">
       <a role="button" class="btn btn-dark btnbtn" href="SecondLayout">
         Snapchat Ads
