--- a/src/app/second-layout-social-footer/second-layout-social-footer.component.css
+++ b/src/app/second-layout-social-footer/second-layout-social-footer.component.css
@@ -1,10 +1,12 @@
 .text-reset{
     text-decoration: none;
     margin: 10px;
+    right: 300px;
     position: relative;
-    right: 150px;
-    width: fit-content;
+    justify-content: left;
 }
 .col-md-4{
+    align-items: center;
     width: 500px;
+    height: 45px;
 }
