--- a/src/app/second-layout-social-footer/second-layout-social-footer.component.html
+++ b/src/app/second-layout-social-footer/second-layout-social-footer.component.html
@@ -2,7 +2,7 @@
     <footer class="d-flex flex-wrap justify-content-center sticky py-2">
       <div class="col-md-4 d-flex">
         
-        <span style="color: gray; font-family: Arial, Helvetica, sans-serif; font-size: 14px;" class="text">
+        <span style="color: white; font-family: Arial, Helvetica, sans-serif; font-size: 14px;" class="text">
            <a class="text-reset" href="">Privacy Policy</a>
            <a class="text-reset" href="">Terms of Service</a>
         </span>
