--- a/src/app/user-info/user-info.component.html
+++ b/src/app/user-info/user-info.component.html
@@ -1,1 +1,16 @@
-<p>user-info works!</p>
+<p *ngIf="myInfo == undefined"> Failed fetching user info </p>
+<div *ngIf="myInfo != undefined"> 
+    <div class="container-fluid">
+        <div class="flex-row">
+            <div class="d-flex flex-column justify-content-between">
+                User: {{myInfo.FirstName}} {{myInfo.LastName}}
+            </div>
+            <div class="flex-column">
+                Mix Id:
+            </div>
+            <div class="flex-column">
+                GitHub:
+            </div>
+        </div>
+    </div>
+</div>
