--- a/src/app/Layout/third-layout/third-layout.component.html
+++ b/src/app/Layout/third-layout/third-layout.component.html
@@ -1,4 +1,5 @@
 <app-navbar3> Loading... </app-navbar3>
+<app-user-info> Loading... </app-user-info>
 <app-body3> Loading... </app-body3>
 <app-footernav> Loading... </app-footernav>
 <app-social-footer> Loading... </app-social-footer>
