--- a/src/app/user-info/user-info.component.html
+++ b/src/app/user-info/user-info.component.html
@@ -1,6 +1,6 @@
 <p *ngIf="myInfo == undefined"> Failed fetching user info </p>
 <div *ngIf="myInfo != undefined"> 
-    <div class="container-fluid">
+    <div class="container-fluid fixed-top">
         <div class="d-flex flex-row justify-content-between">
             <div class="flex-column">
                 User: {{myInfo.FirstName}} {{myInfo.LastName}}
