--- a/src/app/Layout/home-layout/home-layout.component.html
+++ b/src/app/Layout/home-layout/home-layout.component.html
@@ -1,4 +1,5 @@
 <app-navbar> Loading... </app-navbar>
 <app-body> Loading... </app-body>
+<app-user-info> Loading... </app-user-info>
 <app-footernav> Loading... </app-footernav>
 <app-social-footer> Loading... </app-social-footer>
