Cards created in Body 2

--- a/src/app/body2/body2.component.html
+++ b/src/app/body2/body2.component.html
@@ -1,5 +1,5 @@
-<div class="scroll mb-0">
-    <div class="col-10 justify-content-center">
+<div class="scroll">
+    <div class="body-text">
       <span style="font-family: Arial, Helvetica, sans-serif; font-size: 14px;" class="text">
         <h1>Get Snapchat for any device</h1>
         <p>An adventure awaits. Hang out with your friends on our desktop app and keep the conversation going on mobile.</p>
@@ -7,8 +7,41 @@
           Log in to chat
         </a>
     </span>
+  </div>
+  <div class="cards">
+   <div class="card">
+    <div class="card-body">
+      <h5 class="card-title">Desktop
+        <a href="#" class="btn btn-primary">Log in to Chat</a>
+      </h5>
     </div>
-  <div class="col-10 text-end justify-content-center">
-      <img src="assets/Labtop Snap.png" class="rounded" alt="...">
+      <img src="assets/IOS.jpg" class="card-img-bottom" alt="...">
+    </div>
+  <div class="card">
+    <div class="card-body">
+      <h5 class="card-title">Desktop
+        <a href="#" class="btn btn-primary">Log in to Chat</a>
+      </h5>
+    </div>
+      <img src="assets/IOS.jpg" class="card-img-bottom" alt="...">
     </div>
   </div>
+  <div class="cards">
+    <div class="card">
+     <div class="card-body">
+       <h5 class="card-title">Desktop
+         <a href="#" class="btn btn-primary">Log in to Chat</a>
+       </h5>
+     </div>
+       <img src="assets/Labtop Snap.png" class="card-img-bottom" alt="...">
+     </div>
+    <div class="card">
+     <div class="card-body">
+       <h5 class="card-title">Desktop
+         <a href="#" class="btn btn-primary">Log in to Chat</a>
+       </h5>
+     </div>
+       <img src="assets/Labtop Snap.png" class="card-img-bottom" alt="...">
+     </div>
+   </div>
+</div>
