--- a/src/app/body2/body2.component.css
+++ b/src/app/body2/body2.component.css
@@ -1,35 +1,24 @@
-.rounded{
-    height: 400px;
-    position: relative;
-    bottom: 230px;
-    left: 100px;
-    margin-bottom: -100px;
-}
 .text{
     padding: 0 350px;
+}
+.body-text{
+    margin-left: 100px;
+    margin-top: 70px;
+    padding: 70px;
 }
 h1{
     font-size: 65px;
     width: 450px;
-    position: relative;
-    left: 117px;
-    top: 130px;
     color: black;
 }
 p{
     font-size: 25px;
     width: 450px;
-    position: relative;
-    left: 117px;
-    top: 130px;
     color: black;
 }
 .btn-dark{
     font-weight: bold; 
     border-radius: 24px;
-    position: relative;
-    left: 117px;
-    top: 130px;
     background-color: black;
     height: 50px;
     width: 225px;
@@ -39,4 +28,35 @@ p{
 }
 .scroll{
     background-color: #fffc00;
+}
+.card{
+    width: 34rem;
+    border-style: none;
+    border-radius: 25px;
+}
+.cards{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;    
+    gap: 8px;
+    padding: 25px;
+    -ms-transform-origin-x: 74px;
+}
+.btn-primary{
+    border-radius: 100px;
+    font-weight: bold;
+    font-size: 14px;
+    height: 30px;
+    line-height: 16px;
+}
+.card-title{
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 100%;
+}
+.card-img-bottom{
+    padding-bottom: 75px;
+    padding-top: 75px;
 }
