--- a/src/app/body3/body3.component.html
+++ b/src/app/body3/body3.component.html
@@ -1,14 +1,21 @@
-<div class="scroll">
-    <div class="col-10 justify-content-center">
-      <span style="font-family: Arial, Helvetica, sans-serif; font-size: 14px;" class="text">
-        <h1>Snapchat is now on the web!</h1>
-        <p>Chat, Snap, and video call your friends from wherever you are.</p>
-        <a role="button" class="btn btn-dark" href="SecondLayout">
-          Log in to chat
-        </a>
-    </span>
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="assets/Snap 1.jpeg" class="d-block w-100" alt="...">
     </div>
-  <div class="col-10 text-end justify-content-center">
-      <img src="assets/Labtop Snap.png" class="rounded" alt="...">
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
     </div>
   </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
