--- a/src/app/Layout/first-layout/first-layout.component.html
+++ b/src/app/Layout/first-layout/first-layout.component.html
@@ -1,5 +1,5 @@
 <app-navbar> Loading... </app-navbar>
 <app-body2> Loading... </app-body2>
-
+<app-vertical-card> Loading... </app-vertical-card>
 <app-social-footer> Loading... </app-social-footer>
 <app-footernav> Loading... </app-footernav>
