--- a/src/app/body2/body2.component.html
+++ b/src/app/body2/body2.component.html
@@ -7,3 +7,40 @@
           Log in to chat
         </a>
     </span>
+    </div>
+    <div class="cards">
+      <div class="card">
+       <div class="card-body">
+         <h5 class="card-title">Desktop
+           <a href="#" class="btn btn-primary">Log in to Chat</a>
+         </h5>
+       </div>
+         <img src="assets/IOS.jpg" class="card-img-bottom" alt="...">
+       </div>
+     <div class="card">
+       <div class="card-body">
+         <h5 class="card-title">Desktop
+           <a href="#" class="btn btn-primary">Log in to Chat</a>
+         </h5>
+       </div>
+         <img src="assets/IOS.jpg" class="card-img-bottom" alt="...">
+       </div>
+     </div>
+     <div class="cards">
+       <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Desktop
+            <a href="#" class="btn btn-primary">Log in to Chat</a>
+          </h5>
+        </div>
+          <img src="assets/Labtop Snap.png" class="card-img-bottom" alt="...">
+        </div>
+       <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Desktop
+            <a href="#" class="btn btn-primary">Log in to Chat</a>
+          </h5>
+        </div>
+          <img src="assets/Labtop Snap.png" class="card-img-bottom" alt="...">
+        </div>
+      </div>
