--- a/src/app/navbar2/navbar2.component.css
+++ b/src/app/navbar2/navbar2.component.css
@@ -1,33 +1,7 @@
-nav {
-    height: 75px;
-}
-.navbar-nav{
-    color: #000000;
-    margin-left: 10px;
-    margin-right: 10px;
+.nav-link{
+    margin: 10px;
+    font-weight: bold;
 }
 .navbar-brand{
-    margin-left: 25px; 
-}
-.btnbtn { 
-    border-radius: 24px;
-    margin-left: 8px;
-    background-color: black;
-    height: 30px;
-    align-items: center;
-    padding-top: 0%;
-    padding-bottom: 0%;
-    position: relative;
-    top: 5px;
-}
-.btnbtnbtn { 
-    border-radius: 24px;
-    margin-left: 15px;
-    margin-right: 15px;
-    background-color: black;
-    height: 30px;
-    align-items: center;
-    padding-top: 0%;
-    position: relative;
-    top: 5px;
+    margin-left: 70px;
 }
