--- a/src/app/body2/body2.component.css
+++ b/src/app/body2/body2.component.css
@@ -56,7 +56,13 @@ p{
     flex-direction: row;
     width: 100%;
 }
-.card-img-bottom{
+.labtop{
     padding-bottom: 75px;
     padding-top: 75px;
+}
+.card-img-bottom{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
