--- a/src/app/body4/body4.component.html
+++ b/src/app/body4/body4.component.html
@@ -1,8 +1,14 @@
 <div class="scroll">
     <div class="text justify-content-center">
       <span style="font-family: Arial, Helvetica, sans-serif; font-size: 14px;" class="text">
+        <img src="assets/Snap Inc.svg" alt="" style="margin-bottom: 30px;">
         <p>Snap Inc. is a technology company.</p>
         <p>We believe the camera presents the greatest opportunity to improve the way people live and communicate.</p>
         <p>We contribute to human progress by empowering people to express themselves, live in the moment, learn about the world, and have fun together.</p>
     </span>
+  </div>
+  <div>
+    <a class="navbar-brand" href="">
+      <img src="assets/Snap Button.svg" alt="" style="margin-bottom: 30px; width: 125px;">
+    </a>
   </div>
