--- a/src/app/log-in-form/log-in-form.component.html
+++ b/src/app/log-in-form/log-in-form.component.html
@@ -17,7 +17,7 @@
                 <label class="form-label" for="typeEmailX" style="margin-left: 0px;">Password</label>
                 <input type="email" id="typeEmailX" class="form-control form-control-lg">
               </div>
-              <button class="btn btn-outline-light btn-lg bg-dark px-5" type="submit">Login</button>
+              <button href="#!" class="btn btn-outline-light btn-lg bg-dark px-5" type="submit">Login</button>
             </div>
           </div>
         </div>
