--- a/src/app/body2/body2.component.html
+++ b/src/app/body2/body2.component.html
@@ -8,39 +8,4 @@
         </a>
     </span>
     </div>
-    <div class="cards">
-      <div class="card">
-       <div class="card-body">
-         <h5 class="card-title">IOS
-          <a role="button" class="btn btn-primary" href="FirstLayout">
-            Download
-          </a>
-         </h5>
-       </div>
-         <img src="assets/IOS.jpg" class="card-img-bottom" alt="...">
-       </div>
-     <div class="card">
-       <div class="card-body">
-         <h5 class="card-title">Android
-          <a role="button" class="btn btn-primary" href="FirstLayout">
-            Download
-          </a>
-         </h5>
-       </div>
-         <img src="assets/android.jpg" class="card-img-bottom" alt="...">
-       </div>
-     </div>
-     <div class="cards">
-       <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Desktop
-            <a href="#" class="btn btn-primary">Log in to Chat</a>
-          </h5>
-        </div>
-          <img src="assets/Labtop Snap.png" class="labtop" alt="...">
-        </div>
-       <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Desktop</h5>
-          <a href="#" class="btn btn-primary">Log in to Chat</a>
-      </div>
+  <app-vertical-card> Loading... </app-vertical-card>
